--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
-streamlit
-yfinance
-pandas
-numpy
-plotly
-datetime
+pandas==1.5.3
+numpy==1.24.3
+yfinance==0.2.31
+plotly==5.17.0
+streamlit==1.25.0
+datetime==5.1
+requests==2.31.0
+textblob==0.15.3
+nltk==3.7
